k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-journey-deployment
  namespace: web-app-devops
  labels:
    release: my-monitor
spec:
  selector:
    matchLabels:
      app: web-site
  template:
    metadata:
      labels:
        app: web-site
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - web-site
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: my-web-container
          image: qa367xl/my-devops-journey:v1
          imagePullPolicy: Always
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10005
            runAsGroup: 10005
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "200m"
              ephemeral-storage: "100Mi"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
