k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-journey-service
  namespace: web-app-devops
  labels:
    release: my-monitor
spec:
  selector:
    app: web-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
